--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -17,96 +17,118 @@
 #   - input: 用户输入内容
 #   - agent_scratchpad: Agent的思维记录
 
-PROMPT_TEMPLATES = {
-    "completion": {
-        "default": "{input}"
-    },
+PROMPT_TEMPLATES = {}
 
-    "llm_chat": {
-        "default": "{{ input }}",
+PROMPT_TEMPLATES["llm_chat"] = {
+"default": "{{ input }}",
+"py":
+"""
+你是一个聪明的代码助手，请你给我写出简单的py代码。 \n
+{{ input }}
+""",
+}
 
-        "py":
-            """
-        你是一个聪明的代码助手，请你给我写出简单的py代码。 \n
-        {{ input }}
-        """
-        ,
-    },
+PROMPT_TEMPLATES["knowledge_base_chat"] = {
+"default":
+"""
+<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，不允许在答案中添加编造成分，答案请使用中文。 </指令>
+<已知信息>{{ context }}</已知信息>、
+<问题>{{ question }}</问题>
+""",
+"text":
+"""
+<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>
+<已知信息>{{ context }}</已知信息>、
+<问题>{{ question }}</问题>
+""",
+"Empty":  # 搜不到知识库的时候使用
+"""
+请你回答我的问题:
+{{ question }}
+\n
+""",
+}
+PROMPT_TEMPLATES["search_engine_chat"] = {
+"default":
+"""
+<指令>这是我搜索到的互联网信息，请你根据这些信息进行提取并有调理，简洁的回答问题。如果无法从中得到答案，请说 “无法搜索到能回答问题的内容”。 </指令>
+<已知信息>{{ context }}</已知信息>
+<问题>{{ question }}</问题>
+""",
+"search":
+"""
+<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>
+<已知信息>{{ context }}</已知信息>、
+<问题>{{ question }}</问题>
+""",
+}
+PROMPT_TEMPLATES["agent_chat"] = {
+"default":
+"""
+Answer the following questions as best you can. If it is in order, you can use some tools appropriately.You have access to the following tools:
 
-    "knowledge_base_chat": {
-        "default":
-            """
-        <指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，不允许在答案中添加编造成分，答案请使用中文。 </指令>
-        <已知信息>{{ context }}</已知信息>、
-        <问题>{{ question }}</问题>
-        """,
-        "text":
-            """
-        <指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>
-        <已知信息>{{ context }}</已知信息>、
-        <问题>{{ question }}</问题>
-        """,
-        "Empty":  # 搜不到内容的时候调用，此时没有已知信息，这个Empty可以更改，但不能删除，会影响程序使用
-            """
-        <指令>请根据用户的问题，进行简洁明了的回答</指令>
-        <问题>{{ question }}</问题>
-        """,
-    },
+{tools}
 
-    "search_engine_chat": {
-        "default":
-            """
-            <指令>这是我搜索到的互联网信息，请你根据这些信息进行提取并有调理，简洁的回答问题。如果无法从中得到答案，请说 “无法搜索到能回答问题的内容”。 </指令>
-            <已知信息>{{ context }}</已知信息>、
-            <问题>{{ question }}</问题>
-            """,
-        "search":
-            """
-        <指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>
-        <已知信息>{{ context }}</已知信息>、
-        <问题>{{ question }}</问题>
-        """,
-        "Empty":  # 搜不到内容的时候调用，此时没有已知信息，这个Empty可以更改，但不能删除，会影响程序使用
-            """
-        <指令>请根据用户的问题，进行简洁明了的回答</指令>
-        <问题>{{ question }}</问题>
-        """,
-    },
+Please note that the "知识库查询工具" is information about the "西交利物浦大学" ,and if a question is asked about it, you must answer with the knowledge base，
+Please note that the "天气查询工具" can only be used once since Question begin.
 
-    "agent_chat": {
-        "default":
-            """
-        Answer the following questions as best you can. If it is in order, you can use some tools appropriately.You have access to the following tools:
+Use the following format:
+Question: the input question you must answer1
+Thought: you should always think about what to do and what tools to use.
+Action: the action to take, should be one of [{tool_names}]
+Action Input: the input to the action
+Observation: the result of the action
+... (this Thought/Action/Action Input/Observation can be repeated zero or more times)
+Thought: I now know the final answer
+Final Answer: the final answer to the original input question
+Begin!
 
-        {tools}
+history: {history}
 
-        Please note that the "知识库查询工具" is information about the "西交利物浦大学" ,and if a question is asked about it, you must answer with the knowledge base，
-        Please note that the "天气查询工具" can only be used once since Question begin.
+Question: {input}
 
-        Use the following format:
-        Question: the input question you must answer1
-        Thought: you should always think about what to do and what tools to use.
-        Action: the action to take, should be one of [{tool_names}]
-        Action Input: the input to the action
-        Observation: the result of the action
-        ... (this Thought/Action/Action Input/Observation can be repeated zero or more times)
-        Thought: I now know the final answer
-        Final Answer: the final answer to the original input question
+Thought: {agent_scratchpad}
+""",
 
+"ChatGLM3":
+"""
+You can answer using the tools, or answer directly using your knowledge without using the tools.Respond to the human as helpfully and accurately as possible.
+You have access to the following tools:
+{tools}
+Use a json blob to specify a tool by providing an action key (tool name) and an action_input key (tool input).
+Valid "action" values: "Final Answer" or  [{tool_names}]
+Provide only ONE action per $JSON_BLOB, as shown:
 
-        Begin!
-        history:
-        {history}
-        Question: {input}
-        Thought: {agent_scratchpad}
-        """,
+```
+{{{{
+  "action": $TOOL_NAME,
+  "action_input": $INPUT
+}}}}
+```
 
-        "ChatGLM3":   # ChatGLM3必须用官方的提示词，没有修改空间，目前参数都不会传入进去
-        """
-        history:
-        {history}
-        Question: {input}
-        Thought: {agent_scratchpad}
-        """,
-    },
+Follow this format:
+
+Question: input question to answer
+Thought: consider previous and subsequent steps
+Action:
+```
+$JSON_BLOB
+```
+Observation: action result
+... (repeat Thought/Action/Observation N times)
+Thought: I know what to respond
+Action:
+```
+{{{{
+  "action": "Final Answer",
+  "action_input": "Final response to human"
+}}}}
+Begin! Reminder to ALWAYS respond with a valid json blob of a single action. Use tools if necessary. Respond directly if appropriate. Format is Action:```$JSON_BLOB```then Observation:.
+
+history: {history}
+
+Question: {input}
+
+Thought: {agent_scratchpad}
+""",
 }
