数据库和向量库中文档 metadata["source"] 改为相对路径，便于向量库迁移 (#2153)
修复：
- 上传知识库文件名称包括子目录时，自动创建子目录

--- a/configs/basic_config.py.example
+++ b/configs/basic_config.py.example
@@ -27,4 +27,4 @@ if not os.path.exists(LOG_PATH):
 BASE_TEMP_DIR = os.path.join(tempfile.gettempdir(), "chatchat")
 if os.path.isdir(BASE_TEMP_DIR):
     shutil.rmtree(BASE_TEMP_DIR)
-os.makedirs(BASE_TEMP_DIR)
+os.makedirs(BASE_TEMP_DIR, exist_ok=True)
