--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -21,6 +21,13 @@ PROMPT_TEMPLATES = {}
 
 PROMPT_TEMPLATES["llm_chat"] = {
 "default": "{{ input }}",
+"with_history":
+"""The following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.
+
+Current conversation:
+{history}
+Human: {input}
+AI:""",
 "py":
 """
 你是一个聪明的代码助手，请你给我写出简单的py代码。 \n
